--- a/static/index.html
+++ b/static/index.html
@@ -32,7 +32,24 @@
   </head>
   <body>
     <h3>Water Monitor</h3>
+    <button onclick="subscribe()">Subscribe to Push Notifications</button>
 
-    <script type="module" src="/static/webpush.js"></script>
+    <script>
+        async function subscribe() {
+        const registration = await navigator.serviceWorker.register('/webpush-sw.js');
+        const subscription = await registration.pushManager.subscribe({
+            userVisibleOnly: true,
+            applicationServerKey: 'BLUaIGdwCItGdW7FjlENYQecIqwzAL7v2h3tZXmulIyUBGlAu19nbJCVD17LD2Vw8iRboyW8-Z5vGmgF9KnaG_Q'
+        });
+
+        await fetch('/subscribe', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify(subscription)
+        });
+        }
+    </script>
+
+    <script type="module" src="/webpush.js"></script>
   </body>
 </html>
