--- a/static/index.html
+++ b/static/index.html
@@ -20,12 +20,12 @@
     <link rel="apple-touch-icon-precomposed" sizes="152x152" href="icons/apple-touch-icon-152x152.png" />
 
     <!-- Bootstrap CSS -->
-    <link 
+    <!-- <link 
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
       rel="stylesheet" 
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
       crossorigin="anonymous"/>
-    <style>
+    <style> -->
 
     </style>
     <title>Water Monitor</title>
@@ -34,22 +34,6 @@
     <h3>Water Monitor</h3>
     <button onclick="subscribe()">Subscribe to Push Notifications</button>
 
-    <script>
-        async function subscribe() {
-        const registration = await navigator.serviceWorker.register('/webpush-sw.js');
-        const subscription = await registration.pushManager.subscribe({
-            userVisibleOnly: true,
-            applicationServerKey: 'BLUaIGdwCItGdW7FjlENYQecIqwzAL7v2h3tZXmulIyUBGlAu19nbJCVD17LD2Vw8iRboyW8-Z5vGmgF9KnaG_Q'
-        });
-
-        await fetch('/subscribe', {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify(subscription)
-        });
-        }
-    </script>
-
-    <script type="module" src="/webpush.js"></script>
+    <script src="/webpush.js"></script>
   </body>
 </html>
